# ibcmd-rs

./: .gitattributes  .gitignore  .tmp_current_probe_outdir.txt  .tmp_dp_business_network_forms.txt  .tmp_dp_business_network_row_ids.txt  .tmp_dp_forms_probe.txt  .tmp_dp_ticket_probe.txt  .tmp_selected_dp_candidate_outdir.txt  .tmp_selected_dp_outdir.txt  .tmp_zhurnal_spisokdokumentov_table_raw.txt  Cargo.toml  README.md  session-notes.md
compatibility/: bootstrap.json  matrix.json  matrix.schema.json
docs/: agent-tasks-2026-06-30-round10.md  agent-tasks-2026-06-30-round11.md  agent-tasks-2026-06-30-round12.md  agent-tasks-2026-06-30-round13.md  agent-tasks-2026-06-30-round14.md  agent-tasks-2026-06-30-round15.md  agent-tasks-2026-06-30-round16.md  agent-tasks-2026-06-30-round17.md  agent-tasks-2026-06-30-round18.md  agent-tasks-2026-06-30-round19.md  agent-tasks-2026-06-30-round2.md  agent-tasks-2026-06-30-round20.md  agent-tasks-2026-06-30-round21.md  agent-tasks-2026-06-30-round22.md  agent-tasks-2026-06-30-round23.md  agent-tasks-2026-06-30-round24.md  agent-tasks-2026-06-30-round25.md  agent-tasks-2026-06-30-round26.md  agent-tasks-2026-06-30-round27.md  agent-tasks-2026-06-30-round28.md  agent-tasks-2026-06-30-round29.md  agent-tasks-2026-06-30-round3.md  agent-tasks-2026-06-30-round30.md  agent-tasks-2026-06-30-round31.md  agent-tasks-2026-06-30-round32.md  agent-tasks-2026-06-30-round33.md  agent-tasks-2026-06-30-round4.md  agent-tasks-2026-06-30-round5.md  agent-tasks-2026-06-30-round6.md  agent-tasks-2026-06-30-round7.md  agent-tasks-2026-06-30-round8.md  agent-tasks-2026-06-30-round9.md  agent-tasks-2026-06-30.md  agent-tasks-2026-07-01-round34.md  agent-tasks-2026-07-01-round35.md  agent-tasks-2026-07-01-round36.md  agent-tasks-2026-07-01-round37.md  agent-tasks-2026-07-01-round38.md  agent-tasks-2026-07-01-round39.md  agent-tasks-2026-07-01-round40.md  (+22 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cf_parse.rs
profiles/: README.md  schema.json
scripts/: 01-export-ibcmd.bat  02-export-ibcmd-rs.bat  03-diff-ibcmd-vs-ibcmd-rs.bat  analyze-form-command-order.py  audit_release.py  export-ibcmd-vs-ours.ps1  generate_sbom.py  measure-form-navigation-parity.ps1  package_release.py  run-parity-matrix.ps1
src/: cli.rs  compatibility.rs  conversion.rs  dump_sources.rs  form_matrix.rs  form_provenance.rs  form_schema.rs  infobase.rs  legacy_version.rs  lib.rs  main.rs  (+14 more)
(+280 files in other folders)
