[package]
name = "ibcmd-rs"
version = "0.1.1"
edition = "2024"

[workspace]
members = [
    "crates/ibcmd-core",
    "crates/ibcmd-xml",
    "crates/ibcmd-v8",
    "crates/ibcmd-cf",
]
resolver = "3"

[features]
default = []
mssql-live-tests = []
research-corpus-tests = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
ibcmd-core = { path = "crates/ibcmd-core" }
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rayon = "1.10"
uuid = { version = "1.19", features = ["v4"] }
walkdir = "2.5"
